--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Votación Reina Valle 2026</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
   <style>
     .banner {
       width: 100%;
@@ -59,6 +60,44 @@
     </div>
     <button type="submit">Enviar voto</button>
   </form>
+
+  <section class="sponsors-section">
+
+  <h2 class="titulo-sponsors">Patrocinadores Oficiales</h2>
+
+  <div class="piramide-sponsors">
+
+    <!-- Sponsor principal (Grande) -->
+    <div class="sponsor sponsor-grande">
+      <img src="sponsor.jpg" alt="Sponsor Principal">
+    </div>
+
+    <!-- Nivel medio (2) -->
+    <div class="fila">
+      <div class="sponsor sponsor-mediano">
+        <img src="sponsor2.jpg" alt="Sponsor 2">
+      </div>
+      <div class="sponsor sponsor-mediano">
+        <img src="sponsor3.jpg" alt="Sponsor 3">
+      </div>
+    </div>
+
+    <!-- Nivel inferior (3) -->
+    <div class="fila">
+      <div class="sponsor sponsor-pequeno">
+        <img src="sponsor4.jpg" alt="Sponsor 4">
+      </div>
+      <div class="sponsor sponsor-pequeno">
+        <img src="sponsor5.jpg" alt="Sponsor 5">
+      </div>
+      <div class="sponsor sponsor-pequeno">
+        <img src="sponsor6.jpg" alt="Sponsor 6">
+      </div>
+    </div>
+
+  </div>
+
+</section>
 
   <script src="script.js"></script>
 </body>
