Update candidate names and alt texts in voting form

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
   <form id="votingForm">
     <div class="candidates">
       <label>
-        <img src="participante1.jpg" alt="Alexia Cristal Hernández Arias">
-        <input type="radio" name="candidata" value="Alexia Cristal Hernández Arias"> Alexia Cristal Hernández Arias
+        <img src="participante1.jpg" alt="Participante 1">
+        <input type="radio" name="candidata" value="Nombre1 Apellido1 Apellido2"> Participante 1 
       </label>
       <label>
-        <img src="participante2.jpg" alt="Ángeles Samantha Vázquez Moreno">
-        <input type="radio" name="candidata" value="Ángeles Samantha Vázquez Moreno"> Ángeles Samantha Vázquez Moreno
+        <img src="participante2.jpg" alt="Participante 2">
+        <input type="radio" name="candidata" value="Nombre2 Apellido1 Apellido2"> Participante 2
       </label>
       <label>
-        <img src="participante3.jpg" alt="Dulce Jazmín Servín García">
-        <input type="radio" name="candidata" value="Dulce Jazmín Servín García"> Dulce Jazmín Servín García
+        <img src="participante3.jpg" alt="Participante 3">
+        <input type="radio" name="candidata" value="Nombre3 Apellido1 Apellido2"> Participante 3
       </label>
       <label>
-        <img src="participante4.jpg" alt="Fátima Jaime Hernández">
-        <input type="radio" name="candidata" value="Fátima Jaime Hernández"> Fátima Jaime Hernández
+        <img src="participante4.jpg" alt="Participante 4">
+        <input type="radio" name="candidata" value="Nombre4 Apellido1 Apellido2"> Participante 4
       </label>
       <label>
-        <img src="participante5.jpg" alt="Mónica Zavala Murillo">
-        <input type="radio" name="candidata" value="Mónica Zavala Murillo"> Mónica Zavala Murillo
+        <img src="participante5.jpg" alt="Participante 5">
+        <input type="radio" name="candidata" value="Nombre5 Apellido1 Apellido2"> Participante 5
       </label>
     </div>
     <button type="submit">Enviar voto</button>
