Actualizar cerrado.html

--- a/cerrado.html
+++ b/cerrado.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Votación Cerrada</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 
   <style>
     body {
